# jaxhmc

./: README.md  main.py  pyproject.toml
examples/: banana.py  gaussian.py  gaussian_mixture.py  rings.py  step_size_analysis.py
jaxhmc/: eval.py  integrators.py  kitty_utils.py  main.py  mcmc.py  potentials.py  tuning.py
tests/: test_integrators.py  test_mcmc.py
