[project]
name = "jaxhmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flax>=0.12.2",
    "jax>=0.8.2",
    "pytest>=9.0.2",
    "rust>=1.3.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
